# ente-exif-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ente_exif/: __init__.py  __main__.py  cli.py  exiftool.py  sidecar.py
tests/: test_exiftool.py  test_sidecar.py
