[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ente-exif-tool"
version = "1.0.0"
description = "Write Ente Photos JSON metadata into image EXIF tags for Apple Photos, Google Photos, and other apps."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
keywords = ["ente", "exif", "metadata", "apple-photos", "exiftool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "tqdm>=4.60",
]

[project.scripts]
ente-exif = "ente_exif.cli:main"

[project.urls]
Repository = "https://github.com/yourname/ente-exif-tool"
Issues = "https://github.com/yourname/ente-exif-tool/issues"

[tool.setuptools.packages.find]
where = ["src"]
